feat: update tsoa config
